--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "back": "^1.0.1",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "gisty": "^0.1.5",
     "https-proxy-agent": "^1.0.0",
     "jfs": "^0.2.6",
     "mustache": "^2.2.1",
